# nesting-cpp

./: CMakeLists.txt  CMakePresets.json  launch.vs.json
NestingAPI/: CMakeLists.txt  NestingAPI.cpp  NestingAPI.h
